--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<div>
+		<p>Time complexity, efficient: Time complexity is a way of showing how the runtime of a function increases as the size of the input increases. It describes the amount of computer time it takes to run a function.</p>
+	
+		<p><b>Space Complexity,</b> O(n) refers to the amount of memory used by an algorithm or a program during its execution. Time complexity, on the other hand, refers to the amount of time it takes for an algorithm or program to complete its execution.
+		</p>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
